@@ -1,3 +1,9 @@
+2001-02-25 Ian MacPhedran <Ian_MacPhedran@engr.USask.Ca>
+
+	* output-fig.c: Updated.
+	Added support for the "centerline" option
+	Added code to reduce the number of FIG "levels" produced
+ 
 2001-02-24  Masatake YAMATO  <yamato@redhat.com>
 
 	Applied patches from Martin.
